fixes #9507: remove padding on navbar-collapse as any padding on an animated object screws it up; instead use some padding on the navbar nav

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -51,7 +51,8 @@
 // content for the user's viewport.
 
 .navbar-collapse {
-  padding: 5px @navbar-padding-horizontal;
+  padding-right: @navbar-padding-horizontal;
+  padding-left:  @navbar-padding-horizontal;
   border-top: 1px solid darken(@navbar-bg, 7%);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
   // Clear floated elements and prevent collapsing of padding
@@ -66,7 +67,8 @@
 
   @media (min-width: @grid-float-breakpoint) {
     width: auto;
-    padding: 0;
+    padding-right: 0;
+    padding-left:  0;
     border-top: 0;
     box-shadow: none;
 
@@ -181,6 +183,8 @@
 // the nav the full height of the horizontal nav (above 768px).
 
 .navbar-nav {
+  padding-top:    (@navbar-padding-vertical / 2);
+  padding-bottom: (@navbar-padding-vertical / 2);
   margin-left: -@navbar-padding-horizontal;
   margin-right: -@navbar-padding-horizontal;
 
@@ -259,6 +263,8 @@
   @media (min-width: @grid-float-breakpoint) {
     float: left;
     margin: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 
     > li {
       float: left;
